--- a/index.html
+++ b/index.html
@@ -5,11 +5,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Prosto+One&display=swap" rel="stylesheet">
     <title>helping-hand</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
+    <section class="first-section">
+        <div>
+            <h1>Let's Help Those Who Are</h1>
+            <h1>More In Need</h1>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli</p>
+            <p>deterruisset. No duo populo animal noluisse, enim</p>
+            <a class="button" target="_blank" href="https://www.facebook.com/">Donate Now</a>
+        </div>
+    </section>
 </body>
 
 </html>
