donation amount is added

--- a/index.html
+++ b/index.html
@@ -22,6 +22,20 @@
             <a class="button" target="_blank" href="https://www.facebook.com/">Donate Now</a>
         </div>
     </section>
+    <section class="donation-section">
+        <div>
+            <h1>Donate Today</h1>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli</p>
+            <p>deterruisset. No duo populo animal noluisse, enim</p>
+        </div>
+        <div class="donation-amount">
+            <strong>100 tk</strong>
+            <span class="different">200 tk</span>
+            <strong>500 tk</strong>
+            <strong>1000 tk</strong>
+            <strong>5000 tk</strong>
+        </div>
+    </section>
 </body>
 
 </html>
