donation amount revised

--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
             <strong>1000 tk</strong>
             <strong>5000 tk</strong>
         </div>
+        <div>
+            <p class="other-amount">Other amount</p>
+            <a class="button" target="_blank" href="https://www.facebook.com/">Donate Now</a>
+        </div>
     </section>
 </body>
 
