donation plan is added

--- a/index.html
+++ b/index.html
@@ -36,8 +36,55 @@
             <strong>5000 tk</strong>
         </div>
         <div>
-            <p class="other-amount">Other amount</p>
+            <p class="other-amount">Other amount (taka)</p>
             <a class="button" target="_blank" href="https://www.facebook.com/">Donate Now</a>
+        </div>
+    </section>
+    <section class="donation-section">
+        <div>
+            <h1>Our Donate Plan</h1>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli</p>
+            <p>deterruisset. No duo populo animal noluisse, enim</p>
+        </div>
+        <div class="all-cards">
+            <div class="cards">
+                <div class="card" style="background-color:powderblue;">
+                    <div>
+                        <img src="icons/food.png" alt="">
+                    </div>
+                    <div class="card-text">
+                        <h3>Food for a family</h3>
+                        <p>Amet minim mollit non deserunt
+                            ullamco est sit aliqua dolor do amet
+                            sint. Velit officia consequat duis enim
+                            velit mollit.</p>
+                    </div>
+                </div>
+                <div class="card" style="background-color: seashell;">
+                    <div>
+                        <img src="icons/shelter.png" alt="">
+                    </div>
+                    <div class="card-text">
+                        <h3>Shelter for a family</h3>
+                        <p>Amet minim mollit non deserunt
+                            ullamco est sit aliqua dolor do amet
+                            sint. Velit officia consequat duis enim
+                            velit mollit.</p>
+                    </div>
+                </div>
+                <div class="card" style="background-color: moccasin;">
+                    <div>
+                        <img src="icons/Frame-1.png" alt="">
+                    </div>
+                    <div class="card-text">
+                        <h3>Education for a child</h3>
+                        <p>Amet minim mollit non deserunt
+                            ullamco est sit aliqua dolor do amet
+                            sint. Velit officia consequat duis enim
+                            velit mollit.</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 </body>
