devastating conditions are added

--- a/index.html
+++ b/index.html
@@ -87,6 +87,24 @@
             </div>
         </div>
     </section>
+    <section class="depending-lives">
+        <div class="depends-card">
+            <div class="depend-text-card">
+                <h2 style="margin-top: 45px; font-size: 35px; padding-left: 30px;">Their lives depend on your donation
+                </h2>
+                <p style="margin: 30px; text-align: justify;">Lorem ipsum dolor sit amet, usu cu esse possit
+                    referrentur, at eam falli deterruisset. No duo populo
+                    animal noluisse, enim
+                    Lorem ipsum dolor sit amet, usu cu esse possit
+                    referrentur, at eam falli deterruisset.</p>
+                <a class="contribute" target="_blank" href="https://www.facebook.com/">How to contribute?</a>
+            </div>
+            <div class="depends-image-card">
+                <img src="images/donation12.png" alt="">
+            </div>
+        </div>
+
+    </section>
 </body>
 
 </html>
