--- a/index.html
+++ b/index.html
@@ -105,6 +105,23 @@
         </div>
 
     </section>
+    <section class="depending-lives">
+        <div class="depends-card">
+            <div class="depends-image-card">
+                <img style="margin-left: 135px;" src="images/donation10.jpg" alt="">
+            </div>
+            <div class="depend-text-card">
+                <h2 style="margin-top: 45px; font-size: 35px; padding-left: 30px;">They need us to suvive</h2>
+                <p style="margin: 30px; text-align: justify;">Lorem ipsum dolor sit amet, usu cu esse possit
+                    referrentur, at eam falli deterruisset. No duo populo
+                    animal noluisse, enim
+                    Lorem ipsum dolor sit amet, usu cu esse possit
+                    referrentur, at eam falli deterruisset.</p>
+                <a class="contribute" target="_blank" href="https://www.facebook.com/">How to contribute?</a>
+            </div>
+        </div>
+
+    </section>
 </body>
 
 </html>
