--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 <img style="margin-left: 135px;" src="images/donation10.jpg" alt="">
             </div>
             <div class="depend-text-card">
-                <h2 style="margin-top: 45px; font-size: 35px; padding-left: 30px;">They need us to suvive</h2>
+                <h2 style="margin-top: 60px; font-size: 35px; padding-left: 30px;">They need us to suvive</h2>
                 <p style="margin: 30px; text-align: justify;">Lorem ipsum dolor sit amet, usu cu esse possit
                     referrentur, at eam falli deterruisset. No duo populo
                     animal noluisse, enim
@@ -120,8 +120,27 @@
                 <a class="contribute" target="_blank" href="https://www.facebook.com/">How to contribute?</a>
             </div>
         </div>
-
     </section>
+    <section class="update-section">
+        <div class="update-text">
+            <h1 style="font-size: 30px; text-align: center; margin-top: 100px;">Get My Updates</h1>
+            <p style="font-size: 15px; text-align: center; margin-top: 25px">Lorem ipsum dolor sit amet, usu cu esse
+                possit referrentur, at eam falli</p>
+            <p style="font-size: 15px; text-align: center; margin-top: 5px">deterruisset. No duo populo animal
+                noluisse, enim</p>
+        </div>
+        <div class="updated-email">
+            <div class="input" style="text-align: center; padding-top: 70px;">
+                <input type="text" placeholder="Enter Your E-mail">
+                <label for="button">Subscription</label>
+            </div>
+        </div>
+    </section>
+    <footer style="width: 100%; height: 150px; background-color: black; color: aliceblue;">
+        <h1 style="color: brown; text-align: center; padding-top: 50px; font-size: 26px;">Be Humble</h1>
+        <p style="text-align: center; padding-top:10px;">I am gonna do it</p>
+
+    </footer>
 </body>
 
 </html>
